<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        />

    <ImageView
        android:id="@+id/gambarLogo"
        android:layout_width="190dp"
        android:layout_height="150dp"
        android:src="@drawable/applogo" />
    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.3"/>

    <Button
        android:id="@+id/tombolDosen"
        android:layout_margin="5dp"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:drawablePadding="10dp"
        android:textAllCaps="true"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:text="@string/tombol_hijaiyah"
        android:textStyle="bold"
        android:background="@drawable/actionbutton"
        style="?android:attr/borderlessButtonStyle"
        />

    <Button
        android:id="@+id/tombolBagikan"
        android:layout_margin="5dp"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:drawablePadding="10dp"
        android:textAllCaps="true"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:text="@string/action_bagikan"
        android:textStyle="bold"
        android:background="@drawable/actionbutton"
        style="?android:attr/borderlessButtonStyle"
        />

    <Button
        android:id="@+id/tombolInformasi"
        android:layout_margin="5dp"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:drawablePadding="10dp"
        android:textAllCaps="true"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:text="@string/tombol_informasi"
        android:textStyle="bold"
        android:background="@drawable/actionbutton"
        style="?android:attr/borderlessButtonStyle"
        />

    <Button
        android:id="@+id/tombolAplikasi"
        android:layout_margin="5dp"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:drawablePadding="10dp"
        android:textAllCaps="true"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:text="@string/tombol_aplikasi"
        android:textStyle="bold"
        android:background="@drawable/actionbutton"
        style="?android:attr/borderlessButtonStyle"
        />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        />
</LinearLayout>
