<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="7dp">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:minHeight="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="4dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/app_informasi"
            android:textColor="@color/colorTextTitle"
            android:textAlignment="center"
            android:textSize="15dp"
            android:layout_margin="16dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="7dp"
            android:id="@+id/tentang_aplikasi">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_informasi_tentang_aplikasi" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_tentangapp"
                android:layout_gravity="center"
                android:textSize="14dp"
                android:textColor="@color/colorTextInfo"
                android:layout_margin="4dp"
                android:padding="8dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="7dp"
            android:id="@+id/bantuan">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_informasi_bantuan" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_bantuan"
                android:layout_gravity="center"
                android:textSize="14dp"
                android:textColor="@color/colorTextInfo"
                android:layout_margin="4dp"
                android:padding="8dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="7dp"
            android:id="@+id/kritik_saran">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_informasi_feedback" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_kritiksaran"
                android:layout_gravity="center"
                android:textSize="14dp"
                android:textColor="@color/colorTextInfo"
                android:layout_margin="4dp"
                android:padding="8dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="7dp"
            android:id="@+id/tentang">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_informasi_tentangkami" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_tentangkami"
                android:layout_gravity="center"
                android:textSize="14dp"
                android:textColor="@color/colorTextInfo"
                android:layout_margin="4dp"
                android:padding="8dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="7dp"
            android:id="@+id/hakcipta">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_informasi_hakcipta" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_hakcipta"
                android:layout_gravity="center"
                android:textSize="14dp"
                android:textColor="@color/colorTextInfo"
                android:layout_margin="4dp"
                android:padding="8dp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>