<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="7dp">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:minHeight="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </android.support.v7.widget.Toolbar>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="vertical"
            android:gravity="center"
            >
            <ImageView
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:id="@+id/ivLogoGundar"
                android:src="@drawable/applogo"
                android:scaleType="fitCenter"/>
        </LinearLayout>
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView android:id="@+id/tvJudulHakCiptaAplikasi"
                android:text="Hak Cipta Aplikasi"
                android:textSize="15sp"
                android:textColor="@color/colorTextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textStyle="bold"/>
            <android.support.v7.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/cvHakCiptaAplikasi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView android:id="@+id/tvHakCiptaAplikasi"
                        android:text="@string/hakcipta_aplikasi"
                        android:textSize="14sp"
                        android:textColor="@color/colorTextInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:textStyle="bold"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <TextView android:id="@+id/tvJudulHakCiptaData"
                android:text="Hak Cipta Sumber Data"
                android:textSize="15sp"
                android:textColor="@color/colorTextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textStyle="bold"/>
            <android.support.v7.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/cvHakCiptaData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView android:id="@+id/tvHakCiptaData"
                        android:text="@string/hakcipta_data"
                        android:textSize="14sp"
                        android:textColor="@color/colorTextInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:textStyle="bold"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <TextView android:id="@+id/tvJudulHakCiptaLogo"
                android:text="Hak Cipta Logo dan Gambar"
                android:textSize="15sp"
                android:textColor="@color/colorTextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textStyle="bold"/>
            <android.support.v7.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/cvHakCiptaLogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView android:id="@+id/tvHakCiptaLogo"
                        android:text="@string/hakcipta_logo"
                        android:textSize="14sp"
                        android:textColor="@color/colorTextInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:textStyle="bold"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>