<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="7dp">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:minHeight="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </android.support.v7.widget.Toolbar>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="vertical"
            android:gravity="center"
            >
            <ImageView
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:id="@+id/ivLogoGundar"
                android:src="@drawable/applogo"
                android:scaleType="fitCenter"/>
        </LinearLayout>
    </android.support.design.widget.AppBarLayout>
    
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView android:id="@+id/tvJudulCaraPenggunaan"
                android:text="Cara Penggunaan"
                android:textSize="15sp"
                android:textColor="@color/colorTextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textStyle="bold"/>
            <android.support.v7.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/cvCaraPenggunaan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView android:id="@+id/tvCaraPenggunaan"
                        android:text="@string/informasi_bantuan"
                        android:textSize="14sp"
                        android:textColor="@color/colorTextInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:textStyle="bold"/>
                    </LinearLayout>
            </android.support.v7.widget.CardView>
            <TextView android:id="@+id/tvJudulArtiLogo"
                android:text="Informasi Icon"
                android:textSize="15sp"
                android:textColor="@color/colorTextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textStyle="bold"/>
            <android.support.v7.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/cvArtiLogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView android:id="@+id/tvArtiLogo"
                        android:text="@string/informasi_logo"
                        android:textSize="14sp"
                        android:textColor="@color/colorTextInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:textStyle="bold"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <LinearLayout
                            android:id="@+id/linearLayoutJabatan"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:gravity="center_vertical"
                            android:layout_margin="5dp">
                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:id="@+id/ivJabatanDosen"
                                android:src="@drawable/ic_jabatan"
                                android:scaleType="fitCenter"
                                android:layout_margin="10dp"/>
                            <TextView android:id="@+id/tvInfoJabatan"
                                android:text="Jabatan Dosen"
                                android:textSize="13sp"
                                android:textColor="@color/colorTextInfo"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                        </LinearLayout>
                        <LinearLayout
                            android:id="@+id/linearLayoutMatkul"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:gravity="center_vertical"
                            android:layout_margin="5dp">
                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:id="@+id/ivMatkulDosen"
                                android:src="@drawable/ic_matkul"
                                android:scaleType="fitCenter"
                                android:layout_margin="10dp"/>
                            <TextView
                                android:id="@+id/tvInfoMatkul"
                                android:text="Mata Kuliah Dosen"
                                android:textSize="13sp"
                                android:textColor="@color/colorTextInfo"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                        </LinearLayout>
                        <LinearLayout
                            android:id="@+id/linearLayoutSitus"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:gravity="center_vertical"
                            android:layout_margin="5dp">
                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:id="@+id/ivSitusDosen"
                                android:src="@drawable/ic_situs"
                                android:scaleType="fitCenter"
                                android:layout_margin="10dp"/>
                            <TextView
                                android:id="@+id/tvInfoSitus"
                                android:text="Situs Dosen"
                                android:textSize="13sp"
                                android:textColor="@color/colorTextInfo"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                        </LinearLayout>
                        <LinearLayout
                            android:id="@+id/linearLayoutEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:gravity="center_vertical"
                            android:layout_margin="5dp">
                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:id="@+id/ivEmailDosen"
                                android:src="@drawable/ic_email"
                                android:scaleType="fitCenter"
                                android:layout_margin="10dp"/>
                            <TextView
                                android:id="@+id/tvInfoEmail"
                                android:text="Email Dosen"
                                android:textSize="13sp"
                                android:textColor="@color/colorTextInfo"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                        </LinearLayout>
                        <LinearLayout
                            android:id="@+id/linearLayoutAlamatKantor"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:gravity="center_vertical"
                            android:layout_margin="5dp">
                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:id="@+id/ivAlamatKantor"
                                android:src="@drawable/ic_kantor"
                                android:scaleType="fitCenter"
                                android:layout_margin="10dp"/>
                            <TextView
                                android:id="@+id/tvInfoAlamat"
                                android:text="Alamat Kantor Dosen"
                                android:textSize="13sp"
                                android:textColor="@color/colorTextInfo"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                        </LinearLayout>
                        <LinearLayout
                            android:id="@+id/linearLayoutTelepon"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:gravity="center_vertical"
                            android:layout_margin="5dp">
                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:id="@+id/ivTeleponDosen"
                                android:src="@drawable/ic_telepon"
                                android:scaleType="fitCenter"
                                android:layout_margin="10dp"/>
                            <TextView
                                android:id="@+id/tvInfoTelepon"
                                android:text="Telepon Dosen"
                                android:textSize="13sp"
                                android:textColor="@color/colorTextInfo"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <TextView android:id="@+id/tvJudulCopy"
                android:text="Cara Mengambil Informasi Dosen"
                android:textSize="15sp"
                android:textColor="@color/colorTextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textStyle="bold"/>
            <android.support.v7.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/cvCaraCopy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView android:id="@+id/tvCaraCopy"
                        android:text="@string/informasi_copy"
                        android:textSize="14sp"
                        android:textColor="@color/colorTextInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:textStyle="bold"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>